[package]
name = "iodine"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "1.0.102" }
iodine_core = { path = "iodine_core" }

[dev-dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

[lib]
proc-macro = true

[workspace]
members = [
    "iodine_core"
]